vlib/v/parser/tests/struct_embed_wrong_pos_short_err.vv
struct Foo {
	foo string
}
struct Foo2 {
mut:
	Foo
}
fn main() {}